perf-dash.k8s.io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perfdash-status
  namespace: perfdash
  labels:
    app: perfdash
spec:
  selector:
    app: perfdash
  ports:
  - name: status
    port: 80
    targetPort: status
  type: NodePort
